# mdr-girlanda2025

./: CMakeLists.txt  Makefile
lib/MDR32F9Qx_StdPeriph_Driver/src/: MDR32F9Qx_port.c
src/: algos.c  algos.h  helpers.c  helpers.h  main.c  main.h
src/algos/: breath.c  danger_noodle.c  running_red.c  scratch.c  teleporting_snakes.c
